--- a/cineclub-back/docker-compose.local.yml
+++ b/cineclub-back/docker-compose.local.yml
@@ -41,9 +41,7 @@ services:
       - SPRING_DEVTOOLS_RESTART_ENABLED=true
     ports:
       - '${APP_PORT:-8080}:8080'
-    volumes:
-      - .:/app
-    command: ['./mvnw', 'spring-boot:run']
+    command: ["sh", "-c", "./mvnw spring-boot:run"]
 
 volumes:
   mongo_local_data:
